@@ -200,6 +200,7 @@ t/lib/SPVM/TestCase/Sys/IO.spvm
 t/lib/SPVM/TestCase/Sys/Ioctl.spvm
 t/lib/SPVM/TestCase/Sys/Poll.spvm
 t/lib/SPVM/TestCase/Sys/Process.spvm
+t/lib/SPVM/TestCase/Sys/Select.spvm
 t/lib/SPVM/TestCase/Sys/Socket.spvm
 t/lib/SPVM/TestCase/Sys/Time.spvm
 t/lib/SPVM/TestCase/Sys/User.spvm
@@ -211,6 +212,7 @@ t/Sys_IO.t
 t/Sys_Ioctl.t
 t/Sys_Poll.t
 t/Sys_Process.t
+t/Sys_Select.t
 t/Sys_Socket.t
 t/Sys_Time.t
 t/Sys_User.t
