@@ -8,7 +8,8 @@
       static method FD_CLR : void ($fd : int, $set : Sys::Select::Fd_set);
       
       static method FD_ISSET : int ($fd : int, $set : Sys::Select::Fd_set);
-    
+  [Test Improvement]
+    * Improved the tests of the Sys::Select class.
 0.12 2022-10-18
   [Bug Fix]
     * Try to fix the bug on FreeBSD error: invalid application of 'sizeof' to an incomplete type 'struct sockaddr_in'
